--- a/Sql2Excel/Sql2Excel.csproj
+++ b/Sql2Excel/Sql2Excel.csproj
@@ -77,7 +77,7 @@
     <Compile Include="Models\IExport.cs" />
     <Compile Include="Models\Query.cs" />
     <Compile Include="Models\QueryFactory.cs" />
-    <Compile Include="Models\QueryPostreSQL.cs" />
+    <Compile Include="Models\QueryPostgreSQL.cs" />
     <Compile Include="Models\Server.cs" />
     <Compile Include="Models\Place.cs" />
     <Compile Include="Models\ReportType.cs" />
