--- a/Sql2Excel/App.config
+++ b/Sql2Excel/App.config
@@ -1,12 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-		<appSettings>
-				<add key="ReportsFolder" value="..\..\Reports\"/>
-				<add key="FilesFolder" value="..\..\Files\"/>
-				<add key="QueriesFileName" value="Queries.xml"/>
-				<add key="ServersFileName" value="Servers.xml"/>
-		</appSettings>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
-    </startup>
+  <appSettings>
+    <add key="ReportsFolder" value="..\..\Reports\"/>
+    <add key="FilesFolder" value="..\..\Files\"/>
+    <add key="QueriesFileName" value="Queries.xml"/>
+    <add key="ServersFileName" value="Servers.xml"/>
+    <add key="RegexCommand" value="[A-Za-z]+"/>
+    <add key="RegexCommandParams" value="[0-9,]+"/>
+  </appSettings>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
+  </startup>
 </configuration>
